# mlops-model-factory-accelerator

./: CaseStudy.md  README.md
config/: model_config.json
docs/: how_to_setup.md
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/: Dockerfile.amd64  Dockerfile.arm64v8  main.py  module.json  package.json  pyproject.toml
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/src/common/: config_handler.py  constants.py  utils.py
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/src/frame_capture/: config.py  frame_capture.py
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/src/frame_processor/: config.py  edge_inferencing.py  inference_result_handler.py  model.py
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/src/multiprocessing/: controller.py  edge_inferencing_process.py  frame_capture_process.py  inference_result_handler_process.py  queue.py
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/tests/common/: test_config_handler.py
examples/fridge-object-detection/use_case_builder/fridge_detection/modules/fridgemodule/tests/frame_capture/: test_config.py  test_frame_capture.py
notebooks/: execute_commands.ipynb
telco_case_study_implementation/fridge_object_detection/model_factory/fridge_obj_det/model/: pyproject.toml
telco_case_study_implementation/fridge_object_detection/model_factory/fridge_obj_det/model/scoring/: predict.py
(+158 files in other folders)
